--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "an API REST using express.js first project.",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Zimoo343/express_workshop.git"
   },
   "keywords": [
     "api",
@@ -14,7 +19,12 @@
   ],
   "author": "Daivd Ruiz",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Zimoo343/express_workshop/issues"
+  },
+  "homepage": "https://github.com/Zimoo343/express_workshop#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4"
   }
 }
