--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "an API REST using express.js first project.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index",
+    "start": "npm index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
